# crafty-back

./: .dockerignore  .env.fix  .gitignore  AGNO_AGENTS_ARCHITECTURE_ANALYSIS.md  AGNO_AGENT_CONFIGS_ANALYSIS.md  API_ENDPOINT_TEST.md  API_REQUESTS_GUIDE.md  CHANGELOG.md  DYNAMIC_AGENTS_SUPPORT_ANALYSIS.md  MAIN_CONFIGS.md  README.md  TODO_CONFIGS.md  TOOL_CONFIGS.md  TOOL_CREATION_EXAMPLES.md  agent_config_example.md  agent_reference_ru.md  check_database.py  compose.yaml  example.env  full_agent_config_example.json  pyproject.toml  requirements.txt  test_plan.md
.cursor/rules/: rules.mdc
agents/: agent_cache.py  agno_assist.py  cache_listener.py  demo_agent.py  finance_agent.py  memory_agent.py  reasoning_finance_team.py  response_models.py  selector.py  team_manager.py  tool_hooks.py  tools_cache.py  tools_loader.py  web_agent.py
agents/tmp/: agents.db
api/: main.py  settings.py
api/routes/: agents.py  cache.py  custom_tools.py  mcp_tools.py  playground.py  tools.py  v1_router.py
api/utils/: file_processing.py
db/: models.py  registry_models.py  url.py
db/migrations/: alembic.ini  env.py
db/migrations/versions/: 001_create_dynamic_agents.py  002_create_dynamic_tools.py  003_add_custom_tools_mcp.py  004_add_is_active_api_to_dynamic_agents.py  005_create_registries.py  4697822e380c_add_cache_invalidation_triggers.py  8fbe5808c235_add_advanced_agent_examples.py  c7dd7b0ce41c_add_multitenancy_and_organization_fields.py  (+2 more)
db/models/: agent.py  tool.py
db/services/: __init__.py  custom_tool_provider.py  custom_tool_service.py  dynamic_agent_service.py  dynamic_tool_service.py  mcp_provider.py  mcp_service.py  registry_service.py
scripts/: build_image.sh  check_database.py  create_test_agent.py  create_test_tools.py  disable_triggers.py  fix_trigger.py  test_agents_api_full.sh  test_cache_system.py  test_continue_endpoint.sh
test_files/: data.json  sample.csv  sample.txt
